test/error/stray_escaped_vendor_comment.sv
// pattern: Parse error
module top;
    /``* some awful garbage *``/
endmodule
